fixed overlapping

--- a/frontend/src/css/nav.css
+++ b/frontend/src/css/nav.css
@@ -21,5 +21,7 @@ li img{
 }
 
 .navbar{
-    box-shadow: 0 -0px 10px #AAA ;
+    z-index: 99;
+    box-shadow: 0 -0px 10px #AAA;
+    background-color: #F9F9F9;
 }
